--- a/editors/zed/languages/kukicha/config.toml
+++ b/editors/zed/languages/kukicha/config.toml
@@ -8,7 +8,7 @@ autoclose_before = ";:.,=}])>"
 brackets = [
     { start = "(", end = ")", close = true, newline = false },
     { start = "[", end = "]", close = true, newline = false },
-    { start = "{", end = "}", close = true, newline = true },
+    { start = "{", end = "}", close = true, newline = false },
     { start = "\"", end = "\"", close = true, newline = false, not_in = ["comment", "string"] },
     { start = "'", end = "'", close = true, newline = false, not_in = ["comment", "string"] },
 ]
